--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -924,7 +924,7 @@ color: white;}
         padding: 1em;
      }
      #fashion{
-        height: 75vh;
+        height: 100vh;
 
      }
      
@@ -970,7 +970,7 @@ color: white;}
      #contactBTN{
         width: 50%;
         height: 5vh;
-        margin: auto em;
+        margin: auto 3em;
      
      }
      #input-message::placeholder{
@@ -981,7 +981,7 @@ color: white;}
         grid-template-columns: 1fr;
      }
      .contact-me{
-        line-height: 10px;
+        line-height: 30px;
      }
      
      .nav-bar2{
